# rollercoaster

./: CMakeLists.txt
src/: binaryreader.cpp  binaryreader.h  main.cpp  normaldistribution.cpp  normaldistribution.h  rollercoaster.cpp  rollercoaster.h
test/: CMakeLists.txt  test_findrollercoasters_data.txt  test_rollercoaster.cpp
